WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270813
Regression: Pages that update their title now get suspended when backgrounded
https://bugs.webkit.org/show_bug.cgi?id=270813
Summary
Regression: Pages that update their title now get suspended when backgrounded
Chris Dumez
Reported
2024-03-11 13:13:50 PDT
Pages that update their title now get suspended when backgrounded since we've stopped taking near-suspended assertions on both iOS and macOS. We used to monitor pages in the background for 8 minutes to see if they update their title while in the background, if they did, we would let them keep running in the background. Since we no longer take near-suspended assertions, we can no longer observe pages in the background (since they'd get suspended as soon as backgrounded). To address the issue, we now monitor title changes while in the foreground. If the page updates its title, we now take a background assertion to let it keep running after backgrounding. This is not perfect but this addresses the regression for now. We should revisit though because this is too permissive.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-03-11 13:14:02 PDT
<
rdar://124222280
>
Chris Dumez
Comment 2
2024-03-11 13:18:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25737
EWS
Comment 3
2024-03-11 23:16:36 PDT
Committed
275960@main
(3130b409ab45): <
https://commits.webkit.org/275960@main
> Reviewed commits have been landed. Closing PR #25737 and removing active labels.
WebKit Commit Bot
Comment 4
2024-03-15 08:05:10 PDT
Re-opened since this is blocked by
bug 271057
Chris Dumez
Comment 5
2024-03-19 21:31:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26170
EWS
Comment 6
2024-03-20 14:09:35 PDT
Committed
276418@main
(7cd42ac1d51c): <
https://commits.webkit.org/276418@main
> Reviewed commits have been landed. Closing PR #26170 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug